# AIDO

./: README.md  check_user_schema.py  package-lock.json  package.json  test-better-auth.mjs  test-db-connection.mjs  test-signup-detailed.mjs  test-signup.mjs
app/: layout.tsx  page.tsx  style.css
app/api/auth/[...all]/: route.ts
app/api/auth/signup/: route.ts
app/api/upload/: route.ts
app/buyer/: layout.tsx
app/buyer/browse/: page.tsx
app/components/: BackendStatus.tsx  loader.tsx  pageTransition.tsx  pageTransitionWrapper.tsx  sidebar.tsx
app/leaderboard/: page.tsx
app/lib/: auth-client.ts  auth.ts
app/login/: Cursor.tsx  page.tsx
app/profileCreate/: page.tsx
app/seller/: layout.tsx
app/seller/dashboard/: page.tsx
app/types/: index.ts
backend/: add_password_column.py  auth.py  check_tables.py  database.py  fix_duplicate_columns.py  init_db.py  main.py  migrate_user_columns.py  models.py  pyproject.toml  test_main.py
